attached_assets/Pasted-yarn-run-v1-22-22-home-expo-workingdir-build-node-modules-bin-expo-export-embed-eager-platf-1747659823502.txt
yarn run v1.22.22
$ /home/expo/workingdir/build/node_modules/.bin/expo export:embed --eager --platform android --dev false
Starting Metro Bundler
Android node_modules/expo/AppEntry.js ▓▓░░░░░░░░░░░░░░ 17.0% ( 65/261)
Android node_modules/expo/AppEntry.js ▓▓▓░░░░░░░░░░░░░ 22.3% (208/441)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓▓░░░░░░░░░ 44.4% (400/600)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓▓░░░░░░░░░ 47.3% ( 484/1027)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓▓░░░░░░░░░ 47.3% ( 614/1066)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓▓▓▓▓░░░░░░ 65.8% (1032/1272)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓▓▓▓▓░░░░░░ 67.2% (1051/1282)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓▓▓▓▓▓░░░░░ 73.8% (1307/1525)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓▓▓▓▓▓▓░░░░ 78.5% (1621/1830)
Android node_modules/expo/AppEntry.js ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓░ 97.9% (2311/2336)
Android Bundling failed 34583ms node_modules/expo/AppEntry.js (2352 modules)
SyntaxError: client/src/components/payments/PaymentDialogManager.tsx: /home/expo/workingdir/build/client/src/components/payments/PaymentDialogManager.tsx: `import.meta` is not supported in Hermes. Enable the polyfill `unstable_transformImportMeta` in babel-preset-expo to use this syntax.
[0m [90m 18 |[39m
 [90m 19 |[39m [90m// Load Stripe outside of component render for better performance[39m
[31m[1m>[22m[39m[90m 20 |[39m [36mconst[39m stripePromise [33m=[39m loadStripe([36mimport[39m[33m.[39mmeta[33m.[39menv[33m.[39m[33mVITE_STRIPE_PUBLIC_KEY[39m)[33m;[39m
 [90m    |[39m                                  [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m
 [90m 21 |[39m
 [90m 22 |[39m [90m// Create context for payment dialog[39m
 [90m 23 |[39m type [33mPaymentDialogContextType[39m [33m=[39m {[0m
SyntaxError: /home/expo/workingdir/build/client/src/components/payments/PaymentDialogManager.tsx: `import.meta` is not supported in Hermes. Enable the polyfill `unstable_transformImportMeta` in babel-preset-expo to use this syntax.
[0m [90m 18 |[39m
 [90m 19 |[39m [90m// Load Stripe outside of component render for better performance[39m
[31m[1m>[22m[39m[90m 20 |[39m [36mconst[39m stripePromise [33m=[39m loadStripe([36mimport[39m[33m.[39mmeta[33m.[39menv[33m.[39m[33mVITE_STRIPE_PUBLIC_KEY[39m)[33m;[39m
 [90m    |[39m                                  [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m
 [90m 21 |[39m
 [90m 22 |[39m [90m// Create context for payment dialog[39m
 [90m 23 |[39m type [33mPaymentDialogContextType[39m [33m=[39m {[0m
    at File.buildCodeFrameError (/home/expo/workingdir/build/node_modules/@babel/core/lib/transformation/file/file.js:193:12)
    at NodePath.buildCodeFrameError (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/index.js:118:21)
    at PluginPass.MetaProperty (/home/expo/workingdir/build/node_modules/babel-preset-expo/build/import-meta-transform-plugin.js:18:44)
    at newFn (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/visitors.js:172:14)
    at NodePath._call (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:49:20)
    at NodePath.call (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:39:18)
    at NodePath.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:88:31)
    at TraversalContext.visitQueue (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:90:16)
    at TraversalContext.visitSingle (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:66:19)
    at TraversalContext.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:113:19)
    at traverseNode (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/traverse-node.js:131:17)
    at NodePath.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:94:52)
    at TraversalContext.visitQueue (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:90:16)
    at TraversalContext.visitSingle (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:66:19)
    at TraversalContext.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:113:19)
    at traverseNode (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/traverse-node.js:131:17)
    at NodePath.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:94:52)
    at TraversalContext.visitQueue (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:90:16)
    at TraversalContext.visitMultiple (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:62:17)
    at TraversalContext.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:111:19)
    at traverseNode (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/traverse-node.js:131:17)
    at NodePath.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:94:52)
    at TraversalContext.visitQueue (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:90:16)
    at TraversalContext.visitSingle (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:66:19)
    at TraversalContext.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:113:19)
    at traverseNode (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/traverse-node.js:131:17)
    at NodePath.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:94:52)
    at TraversalContext.visitQueue (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:90:16)
    at TraversalContext.visitMultiple (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:62:17)
    at TraversalContext.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:111:19)
    at traverseNode (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/traverse-node.js:131:17)
    at NodePath.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:94:52)
    at TraversalContext.visitQueue (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:90:16)
    at TraversalContext.visitMultiple (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:62:17)
    at TraversalContext.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:111:19)
    at traverseNode (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/traverse-node.js:131:17)
    at NodePath.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/path/context.js:94:52)
    at TraversalContext.visitQueue (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:90:16)
    at TraversalContext.visitSingle (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:66:19)
    at TraversalContext.visit (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/context.js:113:19)
    at traverseNode (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/traverse-node.js:131:17)
    at traverse (/home/expo/workingdir/build/node_modules/@babel/traverse/lib/index.js:53:34)
    at transformFile (/home/expo/workingdir/build/node_modules/@babel/core/lib/transformation/index.js:80:31)
    at transformFile.next (<anonymous>)
    at run (/home/expo/workingdir/build/node_modules/@babel/core/lib/transformation/index.js:25:12)
    at run.next (<anonymous>)
    at /home/expo/workingdir/build/node_modules/@babel/core/lib/transform-ast.js:23:33
    at Generator.next (<anonymous>)
    at evaluateSync (/home/expo/workingdir/build/node_modules/gensync/index.js:251:28)
error Command failed with exit code 1.
info Visit https://yarnpkg.com/en/docs/cli/run for documentation about this command.
